About page is responsive now!

--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,7 @@
         <span class="bubble b1 p2">Simple</span>
         <span class="bubble b3 p4">Safe</span>
       </div>
-      <div class="infoContents">
+      <div class="infoContents main">
         <div class="infoContainer">
           <div class="infoText item">
             <div class="infoTitle">Lorem, ipsum.</div>
@@ -62,6 +62,143 @@
           </button>
         </span>
       </div>
+      <section class="MobileViewAbout">
+        <div class="mitem">
+        <div class="b3 infoContents">
+          <div class="infoContainer">
+            <div class="infoText item">
+              <div class="infoTitle">It's Free!</div>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+              fugit commodi sit error quisquam qui officia temporibus dignissimos
+              ab modi quia facilis, doloremque vitae praesentium enim reiciendis
+              veritatis numquam quaerat eveniet laudantium, culpa non!
+            </div>
+            <div class="infoImage item">
+              <img
+                class="aboutImages"
+                src="/Link-Up/images/aboutp1.jpeg"
+                alt="Test"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="mitem">
+          <div class="b1 infoContents">
+            <div class="infoContainer">
+              <div class="infoText item">
+                <div class="infoTitle">It's Fast!</div>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                fugit commodi sit error quisquam qui officia temporibus dignissimos
+                ab modi quia facilis, doloremque vitae praesentium enim reiciendis
+                veritatis numquam quaerat eveniet laudantium, culpa non!
+              </div>
+              <div class="infoImage item">
+                <img
+                  class="aboutImages"
+                  src="/Link-Up/images/aboutp1.jpeg"
+                  alt="Test"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="mitem">
+            <div class="b2 infoContents">
+              <div class="infoContainer">
+                <div class="infoText item">
+                  <div class="infoTitle">It's Modern!</div>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                  fugit commodi sit error quisquam qui officia temporibus dignissimos
+                  ab modi quia facilis, doloremque vitae praesentium enim reiciendis
+                  veritatis numquam quaerat eveniet laudantium, culpa non!
+                </div>
+                <div class="infoImage item">
+                  <img
+                    class="aboutImages"
+                    src="/Link-Up/images/aboutp1.jpeg"
+                    alt="Test"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="mitem">
+              <div class="b4 infoContents">
+                <div class="infoContainer">
+                  <div class="infoText item">
+                    <div class="infoTitle">There are no strings-attached!</div>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                    fugit commodi sit error quisquam qui officia temporibus dignissimos
+                    ab modi quia facilis, doloremque vitae praesentium enim reiciendis
+                    veritatis numquam quaerat eveniet laudantium, culpa non!
+                  </div>
+                  <div class="infoImage item">
+                    <img
+                      class="aboutImages"
+                      src="/Link-Up/images/aboutp1.jpeg"
+                      alt="Test"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="mitem">
+                <div class="b2 infoContents">
+                  <div class="infoContainer">
+                    <div class="infoText item">
+                      <div class="infoTitle">It's Easy!</div>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                      fugit commodi sit error quisquam qui officia temporibus dignissimos
+                      ab modi quia facilis, doloremque vitae praesentium enim reiciendis
+                      veritatis numquam quaerat eveniet laudantium, culpa non!
+                    </div>
+                    <div class="infoImage item">
+                      <img
+                        class="aboutImages"
+                        src="/Link-Up/images/aboutp1.jpeg"
+                        alt="Test"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="mitem">
+                  <div class="b1 infoContents">
+                    <div class="infoContainer">
+                      <div class="infoText item">
+                        <div class="infoTitle">It's Simple!</div>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                        fugit commodi sit error quisquam qui officia temporibus dignissimos
+                        ab modi quia facilis, doloremque vitae praesentium enim reiciendis
+                        veritatis numquam quaerat eveniet laudantium, culpa non!
+                      </div>
+                      <div class="infoImage item">
+                        <img
+                          class="aboutImages"
+                          src="/Link-Up/images/aboutp1.jpeg"
+                          alt="Test"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="mitem">
+                    <div class="b3 infoContents">
+                      <div class="infoContainer">
+                        <div class="infoText item">
+                          <div class="infoTitle">It's Safe!</div>
+                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                          fugit commodi sit error quisquam qui officia temporibus dignissimos
+                          ab modi quia facilis, doloremque vitae praesentium enim reiciendis
+                          veritatis numquam quaerat eveniet laudantium, culpa non!
+                        </div>
+                        <div class="infoImage item">
+                          <img
+                            class="aboutImages"
+                            src="/Link-Up/images/aboutp1.jpeg"
+                            alt="Test"
+                          />
+                        </div>
+                      </div>
+                    </div>
+      </section>
+
+      
     </main>
   </body>
 </html>
