Curved border on features page

--- a/pages/about.html
+++ b/pages/about.html
@@ -30,11 +30,8 @@
       <div class="infoContents main">
         <div class="infoContainer">
           <div class="infoText item">
-            <div class="infoTitle">Lorem, ipsum.</div>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
-            fugit commodi sit error quisquam qui officia temporibus dignissimos
-            ab modi quia facilis, doloremque vitae praesentium enim reiciendis
-            veritatis numquam quaerat eveniet laudantium, culpa non!
+            <div class="infoTitle">It's Free</div>
+            You don't have to worry about paying any membership fee when using Link Up. Sign up for free and start making friends easily!
           </div>
           <div class="infoImage item">
             <img
@@ -68,10 +65,7 @@
           <div class="infoContainer">
             <div class="infoText item">
               <div class="infoTitle">It's Free!</div>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
-              fugit commodi sit error quisquam qui officia temporibus dignissimos
-              ab modi quia facilis, doloremque vitae praesentium enim reiciendis
-              veritatis numquam quaerat eveniet laudantium, culpa non!
+              You don't have to worry about paying any membership fee when using Link Up. Sign up for free and start making friends easily!
             </div>
             <div class="infoImage item">
               <img
@@ -87,10 +81,7 @@
             <div class="infoContainer">
               <div class="infoText item">
                 <div class="infoTitle">It's Fast!</div>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                fugit commodi sit error quisquam qui officia temporibus dignissimos
-                ab modi quia facilis, doloremque vitae praesentium enim reiciendis
-                veritatis numquam quaerat eveniet laudantium, culpa non!
+                Don't worry about long sign up processes or a limited about of searches per day. Get access with in minutes and match with people who have the same interest as you.
               </div>
               <div class="infoImage item">
                 <img
