--- a/pages/about.html
+++ b/pages/about.html
@@ -18,24 +18,25 @@
         </ul>
       </nav>
       <h1 class="title">Why Link Up</h1>
-      <div class="bubblesContainer">
-        <span class="bubble b3 p6">Free</span>
-        <span class="bubble b1 p1">Fast</span>
-        <span class="bubble b2 p3">Modern</span>
-        <span class="bubble b4 p7">No-Strings <br />Attached</span>
-        <span class="bubble b2 p5">Easy</span>
-        <span class="bubble b1 p2">Simple</span>
-        <span class="bubble b3 p4">Safe</span>
+      <div class="bubblesContainer animate">
+        <span class="bubble b3 p6" id ="p6">Free</span>
+        <span class="bubble b1 p1" id ="p1">Fast</span>
+        <span class="bubble b2 p3" id ="p3">Modern</span>
+        <span class="bubble b4 p7" id ="p7">No-Strings <br />Attached</span>
+        <span class="bubble b2 p5" id ="p5">Easy</span>
+        <span class="bubble b1 p2" id ="p2">Simple</span>
+        <span class="bubble b3 p4" id ="p4">Safe</span>
       </div>
       <div class="infoContents main">
         <div class="infoContainer">
           <div class="infoText item">
-            <div class="infoTitle">It's Free</div>
-            You don't have to worry about paying any membership fee when using Link Up. Sign up for free and start making friends easily!
+            <div class="infoTitle" id="infoTitle">It's Free</div>
+            <p id="infoText">You don't have to worry about paying any membership fee when using Link Up. Sign up for free and start making friends easily!</p>
           </div>
           <div class="infoImage item">
             <img
               class="aboutImages"
+              id ="infoImage"
               src="/Link-Up/images/aboutp1.jpeg"
               alt="Test"
             />
@@ -188,8 +189,7 @@
                       </div>
                     </div>
       </section>
-
-      
     </main>
+    <script src="../scripts/about.js"></script>
   </body>
 </html>
