Feature Page: Added template text, added feature images to page and images folder, created feature.js and implemented slide show affect.

--- a/pages/features.html
+++ b/pages/features.html
@@ -9,68 +9,98 @@
   <body class="content">
     <nav class="navBar">
       <ul class="navLinks">
-          <li class="link"><a href="./home.html" class="link">Home</a></li>
-          <li class="link"><a href="./about.html" class="link">About</a></li>
-          <li class="link"><a href="./login.html" class="link">Login</a></li>
-          <li class="link"><a href="./features.html" class="link">Features</a></li>
-          <li class="link"><a href="./contact.html" class="link">Contact</a></li>
+        <li class="link"><a href="./home.html" class="link">Home</a></li>
+        <li class="link"><a href="./about.html" class="link">About</a></li>
+        <li class="link"><a href="./login.html" class="link">Login</a></li>
+        <li class="link">
+          <a href="./features.html" class="link">Features</a>
+        </li>
+        <li class="link"><a href="./contact.html" class="link">Contact</a></li>
       </ul>
     </nav>
     <h1 class="title animateFadein">Features</h1>
-    <div class="featureContainer">
-      <div class="featureInfo item">
-        <div class="featureTitle">Lorem, ipsum.</div>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-        deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit
-        minus!
+    <div class="main">
+      <div class="featureContainer">
+        <div class="featureInfo item">
+          <div class="featureTitle" id="featureTitle">Lorem, ipsum.</div>
+          <p class="featureText" id="featureText">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+            suscipit minus!
+          </p>
+        </div>
+        <div class="item">
+          <img class="featureImage" id="featureImage" src="../images/featuresp1.jpg" />
+        </div>
       </div>
-      <div class="item">
-        <img class="featureImage" src="../images/featuresp1.jpg" />
-      </div>
+    </div>
       <div class="MobileView">
         <div class="featureInfo item">
-          <div class="featureTitle">Lorem, ipsum.</div>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit
-          minus!
+          <div class="featureTitle">Feature 1</div>
+          <p class="featureText">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+            suscipit minus!
+          </p>
         </div>
         <div class="item">
           <img class="featureImage" src="../images/featuresp1.jpg" />
         </div>
         <div class="featureInfo item">
-          <div class="featureTitle">Lorem, ipsum.</div>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit
-          minus!
+          <div class="featureTitle">Feature 2</div>
+          <p class="featureText">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+            suscipit minus!
+          </p>
         </div>
         <div class="item">
-          <img class="featureImage" src="../images/featuresp1.jpg" />
+          <img class="featureImage" src="../images/featuresp2.jpg" />
         </div>
         <div class="featureInfo item">
-          <div class="featureTitle">Lorem, ipsum.</div>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit
-          minus!
+          <div class="featureTitle">Feature 3</div>
+          <p class="featureText">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+            suscipit minus!
+          </p>
         </div>
         <div class="item">
-          <img class="featureImage" src="../images/featuresp1.jpg" />
+          <img class="featureImage" src="../images/featuresp3.jpg" />
         </div>
         <div class="featureInfo item">
-          <div class="featureTitle">Lorem, ipsum.</div>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi suscipit
-          minus!
+          <div class="featureTitle">Feature 4</div>
+          <p class="featureText">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+            suscipit minus!
+          </p>
         </div>
         <div class="item">
-          <img class="featureImage" src="../images/featuresp1.jpg" />
+          <img class="featureImage" src="../images/featuresp4.jpg" />
         </div>
-
-
-
-
-
-
-
+        <div class="featureInfo item">
+          <div class="featureTitle">Feature 5</div>
+          <p class="featureText">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+            suscipit minus!
+          </p>
+        </div>
+        <div class="item">
+          <img class="featureImage" src="../images/featuresp5.jpg" />
+        </div>
+        <div class="featureInfo item">
+          <div class="featureTitle">Feature 6</div>
+          <p class="featureText">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+            suscipit minus!
+          </p>
+        </div>
+        <div class="item">
+          <img class="featureImage" src="../images/featuresp6.jpg" />
+        </div>
       </div>
     </div>
     <div class="buttonContainer">
@@ -79,7 +109,8 @@
       <button class="featureButton" id="f3"></button>
       <button class="featureButton" id="f4"></button>
       <button class="featureButton" id="f5"></button>
-      <button class="featureButton" id="f6f"></button>
+      <button class="featureButton" id="f6"></button>
     </div>
+    <script src="../scripts/features.js"></script>
   </body>
 </html>
