Features Page: Changed pure javascript to JQuery.

--- a/pages/features.html
+++ b/pages/features.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Features</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
   </head>
   <body class="content">
     <nav class="navBar">
@@ -19,8 +21,8 @@
       </ul>
     </nav>
     <h1 class="title animateFadein">Features</h1>
-    <div class="main">
-      <div class="featureContainer">
+    <div class="main" id="main">
+      <div class="featureContainer" id="fc">
         <div class="featureInfo item">
           <div class="featureTitle" id="featureTitle">Lorem, ipsum.</div>
           <p class="featureText" id="featureText">
