changed motto on home.html

--- a/pages/home.html
+++ b/pages/home.html
@@ -23,7 +23,7 @@
 
     <div class="welcome">
         <h1>Welcome to <img class="logo" src="../images/linkup_logo.png" alt="logo" /></h1>
-        <h2>Meet and make new friends.</h2>
+        <h2 class = "welcome-description">Let's Link Up.</h2>
     </div>
 
     <div class="button">
