fixed login page

--- a/pages/login.html
+++ b/pages/login.html
@@ -29,7 +29,7 @@
               <input class = "login-body__info" type="password" placeholder="Enter Password" name="psw" required>
               <br>
               <button class = "btn btn1" type="submit">Login</button>
-              <button class = "btn btn1" type="submit">Register</button>
+              <button class = "btn btn1" type="submit"><a class = "login-body__link"href ="signup.html">Register</a></button>
           </form>
       </div>
     </body>
