edited gender form requirement

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -43,11 +43,11 @@
             <br>
 
             <label class="headings" for="gender">Gender</label><br>
-            <select id="gender" name="gender" size="1" required>
-                <option value = "gender" style="display:none">Select your gender:</option>
-                <option value = "male">Male</option>
-                <option value = "female">Female</option>
-                <option value = "other">Other</option>
+            <select name="gender" id="gender" required>
+                <option value="">Select your gender:</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
             </select><br><br>
 
             <label class="headings" for="age">Age</label><br>
