update: code was messed up. Fixed

--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
       <span class="bubble b1 p2" id="p2">Simple</span>
       <span class="bubble b3 p4" id="p4">Safe</span>
     </div>
-    <div class="infoContents main">
+    <div class="infoContents mainA">
       <div class="infoContainer">
         <div class="infoText item">
           <div class="infoTitle" id="infoTitle">It's Free</div>
