--- a/pages/features.html
+++ b/pages/features.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Features</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
   </head>
   <body class="content">
     <nav class="navBar">
@@ -21,6 +20,7 @@
       </ul>
     </nav>
     <h1 class="title animateFadein">Features</h1>
+
     <div class="main" id="main">
       <div class="featureContainer" id="fc">
         <div class="featureInfo item">
@@ -32,77 +32,80 @@
           </p>
         </div>
         <div class="item">
-          <img class="featureImage" id="featureImage" src="../images/featuresp1.jpg" />
+          <img
+            class="featureImage"
+            id="featureImage"
+            src="../images/featuresp1.jpg"
+          />
         </div>
       </div>
     </div>
-      <div class="MobileView">
-        <div class="featureInfo item">
-          <div class="featureTitle">Feature 1</div>
-          <p class="featureText">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
-            suscipit minus!
-          </p>
-        </div>
-        <div class="item">
-          <img class="featureImage" src="../images/featuresp1.jpg" />
-        </div>
-        <div class="featureInfo item">
-          <div class="featureTitle">Feature 2</div>
-          <p class="featureText">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
-            suscipit minus!
-          </p>
-        </div>
-        <div class="item">
-          <img class="featureImage" src="../images/featuresp2.jpg" />
-        </div>
-        <div class="featureInfo item">
-          <div class="featureTitle">Feature 3</div>
-          <p class="featureText">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
-            suscipit minus!
-          </p>
-        </div>
-        <div class="item">
-          <img class="featureImage" src="../images/featuresp3.jpg" />
-        </div>
-        <div class="featureInfo item">
-          <div class="featureTitle">Feature 4</div>
-          <p class="featureText">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
-            suscipit minus!
-          </p>
-        </div>
-        <div class="item">
-          <img class="featureImage" src="../images/featuresp4.jpg" />
-        </div>
-        <div class="featureInfo item">
-          <div class="featureTitle">Feature 5</div>
-          <p class="featureText">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
-            suscipit minus!
-          </p>
-        </div>
-        <div class="item">
-          <img class="featureImage" src="../images/featuresp5.jpg" />
-        </div>
-        <div class="featureInfo item">
-          <div class="featureTitle">Feature 6</div>
-          <p class="featureText">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-            deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
-            suscipit minus!
-          </p>
-        </div>
-        <div class="item">
-          <img class="featureImage" src="../images/featuresp6.jpg" />
-        </div>
+    <div class="MobileView">
+      <div class="featureInfo item">
+        <div class="featureTitle">Feature 1</div>
+        <p class="featureText">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+          suscipit minus!
+        </p>
+      </div>
+      <div class="item">
+        <img class="featureImage" src="../images/featuresp1.jpg" />
+      </div>
+      <div class="featureInfo item">
+        <div class="featureTitle">Feature 2</div>
+        <p class="featureText">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+          suscipit minus!
+        </p>
+      </div>
+      <div class="item">
+        <img class="featureImage" src="../images/featuresp2.jpg" />
+      </div>
+      <div class="featureInfo item">
+        <div class="featureTitle">Feature 3</div>
+        <p class="featureText">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+          suscipit minus!
+        </p>
+      </div>
+      <div class="item">
+        <img class="featureImage" src="../images/featuresp3.jpg" />
+      </div>
+      <div class="featureInfo item">
+        <div class="featureTitle">Feature 4</div>
+        <p class="featureText">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+          suscipit minus!
+        </p>
+      </div>
+      <div class="item">
+        <img class="featureImage" src="../images/featuresp4.jpg" />
+      </div>
+      <div class="featureInfo item">
+        <div class="featureTitle">Feature 5</div>
+        <p class="featureText">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+          suscipit minus!
+        </p>
+      </div>
+      <div class="item">
+        <img class="featureImage" src="../images/featuresp5.jpg" />
+      </div>
+      <div class="featureInfo item">
+        <div class="featureTitle">Feature 6</div>
+        <p class="featureText">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+          deleniti porro! Ipsum magni sint exercitationem eos nemo quasi
+          suscipit minus!
+        </p>
+      </div>
+      <div class="item">
+        <img class="featureImage" src="../images/featuresp6.jpg" />
       </div>
     </div>
     <div class="buttonContainer">
