About page: Change pure javaScript to Jquery, fixed the responsiveness of page.

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Why Link-Up</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body class="content">
     <nav class="navBar">
@@ -44,7 +45,7 @@
           />
         </div>
       </div>
-      <span
+      <span class="buttonsLR"
         ><button class="buttonAbout" type="button" id="lClick">
           <img
             class="buttonImage"
@@ -52,7 +53,7 @@
             alt="Arrow pointing to the left"
           /></button
       ></span>
-      <span
+      <span class="buttonsLR"
         ><button class="buttonAbout" type="button" id="rClick">
           <img
             class="buttonImage"
