Features Page: Updates design of page and changed

--- a/pages/features.html
+++ b/pages/features.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Features</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body class="content">
     <nav class="navBar">
@@ -21,8 +22,52 @@
     </nav>
     <h1 class="title animateFadein">Features</h1>
 
-    <div class="main" id="main">
-      <div class="featureContainer" id="fc">
+    <section class="main" id="main">
+      <div class="featureContents">
+        <div class="item" id="f1">
+          <img src="../images/featuresp1.jpg"/>
+          <p class="ft">Feature One</p>
+ 
+          <p id="fa1">Feature 1: anSWER</p>
+        </div>
+        <div class="item" id="f2">
+          <img src="../images/featuresp2.jpg"/>
+          <p class="ft">Feature Two</p>
+          <p id="fa2">Feature 2: anSWER</p>
+
+
+        </div>
+        <div class="item" id="f3">
+          <img src="../images/featuresp3.jpg"/>
+          <p  class="ft">Feature Three</p>
+          <p id="fa3">Feature 3: anSWER</p>
+
+        </div>
+        <div class="item" id="f4">
+          <img src="../images/featuresp4.jpg"/>
+          <p  class="ft">Feature Four</p>
+          <p id="fa4">Feature 4: anSWER</p>
+
+        </div>
+        <div class="item" id="f5">
+          <img src="../images/featuresp5.jpg"/>
+          <p class="ft">Feature Five</p>
+          <p id="fa5">Feature 5: anSWER</p>
+
+        </div>
+        <div class="item" id="f6">
+          <img src="../images/featuresp6.jpg"/>
+          <p class="ft">Feature Six</p>
+          <p id="fa6">Feature 6: anSWER</p>
+
+
+
+        </div>
+
+
+      </div>
+
+      <!-- <div class="featureContainer" id="fc">
         <div class="featureInfo item">
           <div class="featureTitle" id="featureTitle">Lorem, ipsum.</div>
           <p class="featureText" id="featureText">
@@ -38,9 +83,9 @@
             src="../images/featuresp1.jpg"
           />
         </div>
-      </div>
-    </div>
-    <div class="MobileView">
+      </div> -->
+    </section>
+    <section class="MobileView">
       <div class="featureInfo item">
         <div class="featureTitle">Feature 1</div>
         <p class="featureText">
@@ -107,15 +152,17 @@
       <div class="item">
         <img class="featureImage" src="../images/featuresp6.jpg" />
       </div>
-    </div>
+    </section>
     <div class="buttonContainer">
-      <button class="featureButton" id="f1"></button>
-      <button class="featureButton" id="f2"></button>
-      <button class="featureButton" id="f3"></button>
-      <button class="featureButton" id="f4"></button>
-      <button class="featureButton" id="f5"></button>
-      <button class="featureButton" id="f6"></button>
+      <button type="button" class="featureButton" id="f1"></button>
+      <button type="button" class="featureButton" id="f2"></button>
+      <button type="button" class="featureButton" id="f3"></button>
+      <button type="button" class="featureButton" id="f4"></button>
+      <button type="button" class="featureButton" id="f5"></button>
+      <button type="button" class="featureButton" id="f6"></button>
     </div>
     <script src="../scripts/features.js"></script>
+    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+
   </body>
 </html>
