Profile Page: Questionaire section ready for php!

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -143,17 +143,29 @@
 
         <div class="itemB hideQuestionaire">
           <div class="placement">
-            <p>Questionaire Results</p> 
+            <p class="qTitles">Questionaire Results</p> 
           </div>
           <div class="questionaireContainer">
-            <img src="../icons/questionResults.png"/><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, facere!
+            <!-- <img src="../icons/questionResults.png"/><br> -->
+            <p><b>Sunset or Sunrise: </b><span id="profileQ1a"><br>Question 1 aNSWER</span></p>
+            <p><b>Early Bird or Night owl: </b><span id="profileQ2a"><br>Question 2 aNSWER</span></p>
+            <p><b>Netflix or Youtube: </b><span id="profileQ3a"><br>Question 3 aNSWER</span></p>
+            <p><b>Introvert or Extrovert </b><span id="profileQ4a"><br>Question 4 aNSWER</span></p>
+            <p><b>City or Nature: </b><span id="profileQ5a"><br>Question 5 aNSWER</span></p>
+            <p><b>If you could live anywhere, where would you live: </b><span id="profileQ6a"><br>Question 6 aNSWER</span></p>
+            <p><b>Which best describes your fashion style: </b><span id="profileQ7a"><br>Question 7 aNSWER</span></p>
+            <p><b>What is your favorite social media: </b><span id="profileQ8a"><br>Question 8 aNSWER</span></p>
+            <p><b>What's your favourite music genre: </b><span id="profileQ9a"><br>Question 9 aNSWER</span></p>
+          
+
+          </div>
+          <div>
           </div>
 
       </div>
       <div class="itemB">
         <div class="placement">
-          <p>Social Media</p>
+          <p class="qTitles">Social Media</p>
           </div>
           <div class="socialMediaContainer">
             <!-- <img src="../icons/socialMedia.png"/><br> -->
