--- a/pages/settings.html
+++ b/pages/settings.html
@@ -66,10 +66,18 @@
             </li>
         </ul>
     </nav>
+
+
+
+
+
+
+
+
     Settings
     <div class="container">
         <div class="row">
-            <div class="col settings-iframe"">
+            <div class="col settings-iframe">
                 content1
             </div>
             <div class=" col settings-iframe">
