About Page: Added a description, Changed some jquery to pure javascript, changed font-size.

--- a/pages/about.html
+++ b/pages/about.html
@@ -20,6 +20,7 @@
       </ul>
     </nav>
     <h1 class="title">Why Link Up</h1>
+    <p class="mission">Our goal is to ease the struggles of <br>making friends in an online environment during the pandemic.</p>
     <div class="bubblesContainer animate">
       <span class="bubble b3 p6" id="p6">Free</span>
       <span class="bubble b1 p1" id="p1">Fast</span>
@@ -62,6 +63,7 @@
           />
         </button>
       </span>
+
     </div>
     <section class="MobileViewAbout">
       <div class="mitem">
