--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,6 @@
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-            <!-- <li class="logo"><img src="../images/logoG2.png" alt=""></li> -->
 
             <li class="link"><a href="./home.html" class="link">Home</a></li>
             <li class="link"><a href="./about.html" class="link">About</a></li>
@@ -26,22 +25,19 @@
             <li class="link"><a href="./contact.html" class="link">Contact</a></li>
         </ul>
     </header>
-    <div>
-        <!-- <img class="vector" src="../images/chatting.svg" /> -->
-        <img class="bg" src="../images/home.svg" />
+    <div class="home-container">
+
+        <div class="text">
+            <h1>Wanna Link Up?</h1>
+            <div class="button">
+                <button class="btn btn1">Login</button>
+                <button class="btn btn2">Register</button>
+            </div>
+        </div>
+        
+
     </div>
 
-
-    <!-- 
-    <div class="welcome">
-        <h1>Welcome to <img class="logo" src="../images/linkup_logo.png" alt="logo" /></h1>
-        <h2 class = "welcome-description">Let's Link Up.</h2>
-    </div>
-
-    <div class="button">
-        <button class="btn btn1">Login</button>
-        <button class="btn btn2">Register</button>
-    </div> -->
 
 </body>
 
