SCSS ISSUE: Fixed nav bars using vanessa's code on about, feautres and contact page. Features page is changing to a the team page.

--- a/pages/features.html
+++ b/pages/features.html
@@ -9,60 +9,59 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body class="content">
-    <nav class="navBar">
-      <ul class="navLinks">
-        <li class="link"><a href="./home.html" class="link">Home</a></li>
-        <li class="link"><a href="./about.html" class="link">About</a></li>
-        <li class="link"><a href="./login.html" class="link">Login</a></li>
-        <li class="link">
-          <a href="./features.html" class="link">Features</a>
-        </li>
-        <li class="link"><a href="./contact.html" class="link">Contact</a></li>
-      </ul>
+    <nav class="headerOther">
+      <header class="header ">
+        <a href="./home.html" class="logo"
+          ><img src="../images/logoG2.png" alt=""
+        /></a>
+
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"
+          ><span class="navicon"></span
+        ></label>
+        <ul class="menu">
+          <li class="link"><a href="./home.html" class="link">Home</a></li>
+          <li class="link"><a href="./about.html" class="link">About</a></li>
+          <li class="link">
+            <a href="./features.html" class="link">Features</a>
+          </li>
+          <li class="link">
+            <a href="./contact.html" class="link">Contact</a>
+          </li>
+        </ul>
+      </header>
     </nav>
-    <h1 class="title animateFadein">Features</h1>
+
+    <h1 class="title animateFadein">The Team</h1>
 
     <section class="main" id="main">
       <div class="featureContents">
         <div class="item" id="f1">
-          <img src="../images/featuresp1.jpg"/>
-          <p class="ft">Feature One</p>
+          <img src="../images/vanessa.jpg"/>
+          <p class="ft">Vannesa Hoang</p>
  
-          <p id="fa1">Feature 1: anSWER</p>
+          <p>Feature 1: anSWER</p>
         </div>
         <div class="item" id="f2">
-          <img src="../images/featuresp2.jpg"/>
-          <p class="ft">Feature Two</p>
+          <img src="../images/deandra.jpg"/>
+          <p class="ft">Ethan Hou</p>
           <p id="fa2">Feature 2: anSWER</p>
 
 
         </div>
         <div class="item" id="f3">
-          <img src="../images/featuresp3.jpg"/>
-          <p  class="ft">Feature Three</p>
+          <img src="../images/deandra.jpg"/>
+          <p  class="ft">Deandra Spike-Madden</p>
           <p id="fa3">Feature 3: anSWER</p>
 
         </div>
         <div class="item" id="f4">
-          <img src="../images/featuresp4.jpg"/>
-          <p  class="ft">Feature Four</p>
+          <img src="../images/richard.jpg"/>
+          <p  class="ft">Richard Marquez</p>
           <p id="fa4">Feature 4: anSWER</p>
 
         </div>
-        <div class="item" id="f5">
-          <img src="../images/featuresp5.jpg"/>
-          <p class="ft">Feature Five</p>
-          <p id="fa5">Feature 5: anSWER</p>
-
-        </div>
-        <div class="item" id="f6">
-          <img src="../images/featuresp6.jpg"/>
-          <p class="ft">Feature Six</p>
-          <p id="fa6">Feature 6: anSWER</p>
-
-
-
-        </div>
+      </div>
 
 
       </div>
