made homepage more responsive

--- a/pages/question-3.html
+++ b/pages/question-3.html
@@ -165,7 +165,7 @@
                     <input type="radio" id="q1-4" name="q1" value="D">
                     <label for="q1-4">Tokyo</label><br> -->
 
-                    <select name="slct" id="slct">
+                    <select name="slct" id="slct" required>
                         <option selected disabled>Choose an option</option>
                         <option value="1">New York</option>
                         <option value="2">Los Angeles</option>
@@ -200,7 +200,7 @@
                     <label for="q3-4">Trendy</label><br> -->
 
 
-                    <select name="slct" id="slct">
+                    <select name="slct" id="slct" required>
                         <option selected disabled>Choose an option</option>
                         <option value="1">Bold</option>
                         <option value="2">Casual/Comfy</option>
@@ -222,7 +222,7 @@
                     <input type="radio" id="q4-4" name="q4" value="D">
                     <label for="q4-4">Linkedin</label><br> -->
 
-                    <select name="slct" id="slct">
+                    <select name="slct" id="slct" required>
                         <option selected disabled>Choose an option</option>
                         <option value="1">Tiktok</option>
                         <option value="2">Instagram</option>
@@ -243,7 +243,7 @@
                     <label for="q5-3">Indie</label><br>
                     <input type="radio" id="q5-4" name="q5" value="D">
                     <label for="q5-4">EDM/Electronic</label><br> -->
-                    <select name="slct" id="slct">
+                    <select name="slct" id="slct" required>
                         <option selected disabled>Choose an option</option>
                         <option value="1">Pop</option>
                         <option value="2">Rap/R&B</option>
