--- a/pages/question.html
+++ b/pages/question.html
@@ -8,7 +8,7 @@
         <div class="question-container">
             <p class="question-text">Complete this simple questionnaire to get matched up with people with similar qualities/interests!</p>
             <p class="question-sm-text">Estimated Time: 20 mins</p>
-            <button class="question-back-btn">Back</button>
+            <!-- <button class="question-back-btn">Back</button> -->
             <a href="question-3.html"><button class="question-btn">Let's get matched!</button></a>
             
         </div>
