--- a/pages/home.html
+++ b/pages/home.html
@@ -27,8 +27,13 @@
     </header>
     <div class="home-container">
 
-        <div class="text">
-            <h1>Wanna Link Up?</h1>
+        <div class="home-left">
+
+            <div class="text">
+                <img class="home-left-logo" src="../images/linkup_smlogo.png" alt="">
+                <h1>Wanna Link Up?</h1>
+            </div>
+ 
             <div class="button">
                 <button class="btn btn1">Login</button>
                 <button class="btn btn2">Register</button>
