made changes to login page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,7 +39,7 @@
             <input type="text" id="email" name="email" placeholder="Email" required><br>
             <label for="msg">Your Message</label><br>
             <textarea id="msg" name="message" placeholder="Feel free to inquire us about anything." required></textarea><br><br>
-            <button id="send-btn" type="button">Send</button>
+            <button class="send-btn" type="button">Send</button>
         </form>
         </main>
     </body>
