--- a/pages/home.html
+++ b/pages/home.html
@@ -35,8 +35,9 @@
             </div>
  
             <div class="button">
-                <button class="btn btn1">Login</button>
-                <button class="btn btn2">Register</button>
+                <a href="../pages/login.html"><button class="btn btn1">Login</button></a>
+                <a href="../pages/signup.html"><button class="btn btn2">Register</button></a>
+    
             </div>
         </div>
         
