added nav bars to more pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,16 +31,20 @@
         <main class="content">
           
         <h2>Contact Us!</h2>
-        <form class="msg-form">
-            <label>Full Name</label><br>
-            <input type="text" id="fname" name="fname" placeholder="First Name" required>
-            <input type="text" id="lname" name="lname" placeholder="Last Name" required><br>
-            <label for="email">Email</label><br>
-            <input type="text" id="email" name="email" placeholder="Email" required><br>
-            <label for="msg">Your Message</label><br>
-            <textarea id="msg" name="message" placeholder="Feel free to inquire us about anything." required></textarea><br><br>
-            <button class="send-btn" type="button">Send</button>
-        </form>
+        <div class="contact-container">        
+          <form class="msg-form">
+          <label>Full Name</label><br>
+          <input type="text" id="fname" name="fname" placeholder="First Name" required>
+          <input type="text" id="lname" name="lname" placeholder="Last Name" required><br>
+          <label for="email">Email</label><br>
+          <input type="text" id="email" name="email" placeholder="Email" required><br>
+          <label for="msg">Your Message</label><br>
+          <textarea id="msg" name="message" placeholder="Feel free to inquire us about anything." required></textarea><br><br>
+          <button class="send-btn" type="button">Send</button>
+      </form>
+
+        </div>
+
         </main>
     </body>
 </html>
