--- a/pages/login.html
+++ b/pages/login.html
@@ -38,7 +38,7 @@
     <img src="../images/authentication.png">
   </div> -->
   <div class="login-body">
-    <img class="login-body__image" src="../images/logoG2.png" alt="Link-Up logo small format.">
+    <img class="login-body__image" src="../images/linkup_smlogo.png" alt="Link-Up logo small format.">
     <form action="action_page.php" method="post">
 
       <input class="login-body__info" type="text" placeholder="Enter Username" name="uname" required>
@@ -49,7 +49,7 @@
       <button class="login-body__button" type="submit"><a class="login-body__link" href="login.html">Login</a></button>
       <!-- <button class="login-body__button" type="submit"><a class="login-body__link" href="signup.html">Register</a></button> -->
       <p class="login-body__forgot">Don't have an account? <a class="login-body__forgot-link"
-        href="https://www.youtube.com/watch?v=ydVt0wT5aHg" target="_blank">Click here to register.</a></p>
+        href="../pages/signup.html">Click here to register.</a></p>
       <p class="login-body__forgot">Forgot password? <a class="login-body__forgot-link"
           href="https://www.youtube.com/watch?v=ydVt0wT5aHg" target="_blank">Click here.</a></p>
     </form>
