--- a/pages/signup.html
+++ b/pages/signup.html
@@ -10,15 +10,28 @@
 </head>
 
 <body>
-    <nav class="navBar">
-        <ul class="navLinks">
+    <nav class="headerOther">
+        <header class="header ">
+          <a href="./home.html" class="logo"
+            ><img src="../images/logoG2.png" alt=""
+          /></a>
+    
+          <input class="menu-btn" type="checkbox" id="menu-btn" />
+          <label class="menu-icon" for="menu-btn"
+            ><span class="navicon"></span
+          ></label>
+          <ul class="menu">
             <li class="link"><a href="./home.html" class="link">Home</a></li>
             <li class="link"><a href="./about.html" class="link">About</a></li>
-            <li class="link"><a href="./login.html" class="link">Login</a></li>
-            <li class="link"><a href="./features.html" class="link">Features</a></li>
-            <li class="link"><a href="./contact.html" class="link">Contact</a></li>
-        </ul>
-    </nav>
+            <li class="link">
+              <a href="./features.html" class="link">Features</a>
+            </li>
+            <li class="link">
+              <a href="./contact.html" class="link">Contact</a>
+            </li>
+          </ul>
+        </header>
+      </nav>
 
     <script>
         function validatePassword(password, confirmed_password) {
